@@ -16,6 +16,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  * Author: Nicola Baldo <nbaldo@cttc.es>
+ *         Michele Polese <michele.polese@gmail.com> for the OutdoorPositionAllocator class
  */
 #include "building-position-allocator.h"
 #include <ns3/mobility-building-info.h>
@@ -29,6 +30,8 @@
 #include "ns3/log.h"
 #include "ns3/box.h"
 #include "ns3/building.h"
+#include "ns3/string.h"
+#include "ns3/pointer.h"
 #include <cmath>
 
 #include "ns3/building-list.h"
@@ -101,6 +104,121 @@ RandomBuildingPositionAllocator::AssignStreams (int64_t stream)
 {
   m_rand->SetStream (stream);
   return 1;
+}
+
+
+NS_OBJECT_ENSURE_REGISTERED (OutdoorPositionAllocator);
+
+OutdoorPositionAllocator::OutdoorPositionAllocator ()
+{
+}
+
+TypeId
+OutdoorPositionAllocator::GetTypeId (void)
+{
+  static TypeId tid = TypeId ("ns3::OutdoorPositionAllocator")
+    .SetParent<PositionAllocator> ()
+    .SetGroupName ("Buildings")
+    .AddConstructor<OutdoorPositionAllocator> ()
+    .AddAttribute ("X",
+                   "A random variable which represents the x coordinate of a position in a random box.",
+                   StringValue ("ns3::UniformRandomVariable[Min=0.0|Max=1.0]"),
+                   MakePointerAccessor (&OutdoorPositionAllocator::m_x),
+                   MakePointerChecker<RandomVariableStream> ())
+    .AddAttribute ("Y",
+                   "A random variable which represents the y coordinate of a position in a random box.",
+                   StringValue ("ns3::UniformRandomVariable[Min=0.0|Max=1.0]"),
+                   MakePointerAccessor (&OutdoorPositionAllocator::m_y),
+                   MakePointerChecker<RandomVariableStream> ())
+    .AddAttribute ("Z",
+                   "A random variable which represents the z coordinate of a position in a random box.",
+                   StringValue ("ns3::UniformRandomVariable[Min=0.0|Max=1.0]"),
+                   MakePointerAccessor (&OutdoorPositionAllocator::m_z),
+                   MakePointerChecker<RandomVariableStream> ())
+    .AddAttribute ("MaxAttempts",
+                   "Maximum number of attempts for the rejection sampling before giving up.",
+                   UintegerValue (1000),
+                   MakeUintegerAccessor (&OutdoorPositionAllocator::m_maxAttempts),
+                   MakeUintegerChecker<uint32_t> ())
+  ;
+
+  return tid;
+}
+
+void
+OutdoorPositionAllocator::SetX (Ptr<RandomVariableStream> x)
+{
+  m_x = x;
+}
+void
+OutdoorPositionAllocator::SetY (Ptr<RandomVariableStream> y)
+{
+  m_y = y;
+}
+void
+OutdoorPositionAllocator::SetZ (Ptr<RandomVariableStream> z)
+{
+  m_z = z;
+}
+
+Vector
+OutdoorPositionAllocator::GetNext () const
+{
+  NS_ABORT_MSG_IF (BuildingList::GetNBuildings () == 0, "no building found");
+
+  bool outdoor = false;
+  uint32_t attempts = 0;
+  Vector position = Vector (0,0,0);
+
+  while (!outdoor && attempts < m_maxAttempts)
+    {
+      // get a random position
+      double x = m_x->GetValue ();
+      double y = m_y->GetValue ();
+      double z = m_z->GetValue ();
+
+      position = Vector (x, y, z);
+
+      NS_LOG_INFO ("Position " << position);
+
+      bool inside = false;
+      for (BuildingList::Iterator bit = BuildingList::Begin (); bit != BuildingList::End (); ++bit)
+        {
+          if ((*bit)->IsInside (position))
+            {
+              NS_LOG_INFO ("Position " << position << " is inside the building with boundaries "
+                                       << (*bit)->GetBoundaries ().xMin << " " << (*bit)->GetBoundaries ().xMax << " "
+                                       << (*bit)->GetBoundaries ().yMin << " " << (*bit)->GetBoundaries ().yMax << " "
+                                       << (*bit)->GetBoundaries ().zMin << " " << (*bit)->GetBoundaries ().zMax);
+              inside = true;
+              break;
+            }
+        }
+
+      if (inside)
+        {
+          NS_LOG_INFO ("Inside a building, attempt " << attempts << " out of " << m_maxAttempts);
+          attempts++;
+        }
+      else
+        {
+          NS_LOG_INFO ("Outdoor position found " << position);
+          outdoor = true;
+        }
+    }
+
+  NS_ABORT_MSG_IF (attempts >= m_maxAttempts, "Too many attempts, give up");
+  NS_ABORT_MSG_IF (!outdoor, "Still indoor, give up");
+  return position;
+}
+
+int64_t
+OutdoorPositionAllocator::AssignStreams (int64_t stream)
+{
+  m_x->SetStream (stream);
+  m_y->SetStream (stream + 1);
+  m_z->SetStream (stream + 2);
+  return 3;
 }
 
 
